// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Display main display 1`] = `
<RX.View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RX.Text
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Your App
  </RX.Text>
  <RX.Text
    style={
      Object {
        "color": "#333333",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  />
</RX.View>
`;

exports[`Storyshots Hello shows name "Joseph" 1`] = `
<RX.View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RX.Text
    style={
      Object {
        "color": "#110022",
        "fontSize": 18,
        "paddingBottom": 10,
        "textAlign": "center",
      }
    }
  >
    Hello, 
    Joseph
  </RX.Text>
  <RX.Button
    onPress={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#330066",
          "borderRadius": 5,
          "justifyContent": "center",
          "paddingBottom": 10,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <RX.Text
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Random Name
    </RX.Text>
  </RX.Button>
</RX.View>
`;
